--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>iwasm</title>
   <script type="module">
-    import { add } from "./build/release.js";
-    document.body.innerText = add(1, 2);
+    import { minusOne } from "./build/release.js";
+    document.body.innerText = minusOne(789);
   </script>
 </head>
 
