--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>iwasm</title>
   <script type="module">
-    import { minusOne } from "./build/release.js";
-    document.body.innerText = minusOne(789);
+    import { minusOne, fizzbuzz } from "./build/release.js";
+    document.body.innerText = `789 minus 1 is ${minusOne(789)}, fizzbuzz returns ${fizzbuzz(789)}`;
   </script>
 </head>
 
